--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -33,8 +33,8 @@
 }
 
 .post_date {
-    font-size: 12px;
-    font-weight: 600;
+  font-size: 12px;
+  font-weight: 600;
 }
 
 .postcenter img {
@@ -68,4 +68,85 @@
   align-items: center;
   gap: 5px;
   cursor: pointer;
+}
+
+.comment_section {
+  height: 85%;
+  width: 330px;
+  background-color: white;
+  position: fixed;
+  top: 49px;
+  right: 10px;
+  overflow-y: scroll;
+  z-index: 99;
+}
+
+.comment_section::-webkit-scrollbar {
+  display: none;
+}
+
+.comment_section::-webkit-scrollbar-track {
+  background-color: white;
+}
+
+.comment_section::-webkit-scrollbar-thumb {
+  background-color: rgb(216, 214, 214);
+  border-radius: 60px;
+}
+
+.comment_heading {
+  background-color: white;
+  text-align: center;
+  border-bottom: 2px solid black;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
+.close_comment {
+  float: right;
+  margin-top: 2px;
+  cursor: pointer;
+}
+
+.close_comment_section {
+  display: none;
+}
+
+.comment_input_div {
+  display: flex;
+  background-color: white;
+  position: fixed;
+  bottom: 0;
+  width: inherit;
+  z-index: 1;
+}
+
+.comment_input {
+  border: 1px solid black;
+  border-right: 0;
+  width: 100%;
+  margin: 0 0 10px 0;
+  padding: 5px;
+}
+
+.comment_input:focus {
+  outline: none;
+}
+
+.comment_send {
+  position: relative;
+  right: 4px;
+  padding: 7px;
+  font-size: 20px;
+  border: 1px solid black;
+  border-left: 0;
+  margin: 0 0 10px 0;
+  cursor: pointer;
+  background-color: white;
+}
+
+.comment_text {
+  text-align: center;
+  margin-top: 207px;
 }
