--- a/src/components/topbar/Topbar.css
+++ b/src/components/topbar/Topbar.css
@@ -1,86 +1,137 @@
-.topBarContainer{
-    height: 50px;
-    width: 100%;
-    background: linear-gradient(antiquewhite 75%, white);
-    /* background-color: antiquewhite; */
-    display: flex;
-    align-items: center;
-    position: sticky;
-    top: 0;
-    z-index: 999;
+.topBarContainer {
+  height: 50px;
+  width: 100%;
+  background: linear-gradient(antiquewhite 75%, white);
+  /* background-color: antiquewhite; */
+  display: flex;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 999;
 }
 
-.logo{
-    text-decoration: none;
-    color: black;
-    font-size: 22px;
-    font-weight: 800;
-    margin-left: 30px;  
-    text-shadow: -2px -2px 10px rgb(161, 161, 161);
+.logo {
+  text-decoration: none;
+  color: black;
+  font-size: 22px;
+  font-weight: 800;
+  margin-left: 30px;
+  text-shadow: -2px -2px 10px rgb(161, 161, 161);
 }
 
-.topBarLeft{
-    flex: 3;
+.topBarLeft {
+  flex: 3;
 }
 
-.topBarLeft h3{
-    font-size: 25px;
-    margin-left: 20px;
+.topBarLeft h3 {
+  font-size: 25px;
+  margin-left: 20px;
 }
 
-.topBarCenter{
-    flex: 5;
+.topBarCenter {
+  flex: 5;
 }
 
-.topBarCenter input{
-    width: 70%;
-    height: 15px;
-    border-radius: 30px;
-    align-items: center;
-    border: none;
-    font-size: 17px;
-    padding: 10px;
+.topBarCenter input {
+  width: 70%;
+  height: 15px;
+  border-radius: 30px;
+  border: none;
+  font-size: 17px;
+  padding: 10px;
 }
 
-.topBarCenter input:focus{
-    outline: none;
+.topBarCenter input:focus {
+  outline: none;
 }
 
-.topBarRight{
-    flex: 2;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
+.search_box {
+  background-color: white;
+  padding: 15px;
+  position: absolute;
+  margin: 10px auto;
+  width: 468px;
+  max-height: 330px;
+  overflow-y: scroll;
+  box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 68);
+  border-radius: 10px;
 }
 
-.topBarIcon{
-    display: flex;
+.search_box::-webkit-scrollbar {
+  display: none;
 }
 
-.iconLink{
-    font-size: 20px;
-    margin: 0 5px;
-    cursor: pointer;
+.search_div {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  width: 100%;
+  height: 40px;
+  margin: 10px 0;
+  cursor: pointer;
+  border-radius: 10px;
 }
 
-.iconBadge{
-    position: relative;
-    background-color: red;
-    color: white;
-    width: 15px;
-    height: 15px;
-    font-size: 9px;
-    text-align: center;
-    border-radius: 50%;
-    border: 2px solid white;
-    top: 2px;
-    right: 20px;
+.search_div:hover {
+  box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 68);
 }
 
-.topBarRight img{
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
+.search_profile_img {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+  border-radius: 50%;
 }
 
+.search_div span {
+  font-weight: 600;
+}
+
+.topBarRight {
+  flex: 2;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.topBarIcon {
+  display: flex;
+  width: 60px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.bell_icon {
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.profile_icon {
+  font-size: 20px;
+  cursor: pointer;
+  color: black;
+}
+
+.iconBadge {
+  position: relative;
+  background-color: black;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  border: 2px solid white;
+  top: -6px;
+  right: 18px;
+  cursor: pointer;
+}
+
+.logout_icon {
+  font-size: 20px;
+  cursor: pointer;
+  color: black;
+}
+
+.topBarRight img {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
