--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -13,6 +13,7 @@
 .posttop {
   display: flex;
   align-items: center;
+  gap: 7px;
 }
 
 .posttop img {
@@ -23,11 +24,6 @@
   max-height: 500px;
 }
 
-.posttop span {
-  display: flex;
-  margin: 0 5px;
-}
-
 .name_span {
   font-weight: 700;
 }
@@ -35,6 +31,35 @@
 .post_date {
   font-size: 12px;
   font-weight: 600;
+}
+
+.post_list_box {
+  display: flex;
+  align-items: center;
+  background-color: antiquewhite;
+  padding: 8px;
+  border-radius: 8px;
+  gap: 10px;
+  margin-left: auto;
+}
+
+#post_list_update_icon {
+  cursor: pointer;
+}
+
+#post_list_delete_icon {
+  cursor: pointer;
+}
+
+#post_list_cross_icon {
+  cursor: pointer;
+  transition: 3s;
+}
+
+#post_dots_icon {
+  margin-left: auto;
+  margin-right: 11px;
+  cursor: pointer;
 }
 
 .postcenter img {
