--- a/src/components/story/Story.css
+++ b/src/components/story/Story.css
@@ -3,31 +3,72 @@
   overflow-y: scroll;
 }
 
-.story::-webkit-scrollbar{
+.story::-webkit-scrollbar {
   width: 5px;
   height: 0;
 }
 
-.story::-webkit-scrollbar-track{
+.story::-webkit-scrollbar-track {
   background-color: white;
 }
 
-.story::-webkit-scrollbar-thumb{
+.story::-webkit-scrollbar-thumb {
   background-color: rgb(216, 214, 214);
   border-radius: 60px;
 }
 
-.newStory{
+.newStory {
   display: flex;
   /* justify-content: start; */
   /* align-items: center; */
   /* text-align: center; */
   gap: 10px;
   width: 400px;
-  height: auto; 
+  height: auto;
 }
 
-.storyBox{
+.add_icon {
+  width: 50px;
+  height: 50px;
+  align-self: center;
+  padding-top: 5px;
+  color: #ffe3be;
+  cursor: pointer;
+}
+
+.add_list {
+  width: 70px;
+  background-color: antiquewhite;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  position: absolute;
+  padding: 5px;
+}
+
+.list_span {
+  background-color: antiquewhite !important;
+  border: none !important;
+  color: black !important;
+  font-weight: 500 !important;
+}
+
+#box_upper_pointer {
+  width: 0;
+  height: 10px;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 10px solid antiquewhite;
+  position: absolute;
+  top: -7px;
+  left: 15px;
+}
+
+.add_list_hr {
+  margin: 0;
+}
+
+.storyBox {
   width: 60px;
   height: 60px;
   border: 3px solid antiquewhite;
@@ -35,11 +76,36 @@
   background-color: gray;
 }
 
-
-.storyBox img{
+.storyBox img {
   height: 100%;
   object-fit: cover;
   border-radius: 50%;
 }
 
+.select_form_div {
+  display: flex;
+  gap: 10px;
+}
 
+.newPost_submit_btn {
+  background-color: antiquewhite;
+  font-weight: 700;
+  float: right;
+  border-radius: 12px;
+  padding: 5px 16px;
+  border: none;
+}
+
+.newPost_submit_btn:hover {
+  background-color: #f7e5cd;
+}
+
+/* MyModal */
+
+.new_post_caption {
+  overflow-y: scroll;
+}
+
+.new_post_caption::-webkit-scrollbar {
+  display: none;
+}
