--- a/src/components/feed/Feed.css
+++ b/src/components/feed/Feed.css
@@ -1,6 +1,8 @@
 .feed{
-    flex: 5;
+    /* flex: 5; */
+    width: 60%;
     margin: 0px 100px 0px 100px;
+    /* margin: auto; */
     /* overflow-y: scroll; */
 }
 
